test/typecheck/fail/enum_functions_partial.sail
default Order dec
$include <prelude.sail>

$[enum_functions { to_enum = bar }]
enum Foo = A | B | C
